# atizer

./: LICENSE  README.md
examples/fortran_openmp/: __init__.py  autodel.sh  autogen.sh  foo.cpp  main.F90
examples/hellolib/: __init__.py
examples/hellolib/src/: __init__.py  hello.cpp  hello.hpp
examples/helloprog/: __init__.py
examples/helloprog/src/: __init__.py
examples/lapack_mkl_program/: __init__.py  autodel.sh  autogen.sh
examples/lapack_mkl_program/src/: FortranConfig.hpp  LAPACK_FortranInterface.hpp  cg.hpp  cge.hpp  cge.tpp  cgt.hpp  cgt.tpp  constraint_enforcer.hpp  constraint_enforcer.tpp  constraints.hpp  csy.hpp  csy.tpp  cv.hpp  cv.tpp  di.hpp  di.tpp  eigen.hpp  exceptions.hpp  ge.hpp  ge.tpp  gt.hpp  gt.tpp  l1.hpp  l2.hpp  l3.hpp  lalg.hpp  main.cpp  solve.hpp  svd.hpp  sy.hpp  sy.tpp  v.hpp  v.tpp
examples/lib_and_noinst_test_programs/: Doxyfile  __init__.py  config.py  init.py.bak  targets.py
examples/lib_and_noinst_test_programs/examples/: COPYING  LICENSE.cxx_example  LICENSE.fortran_example  LICENSE.pytdbsc  Makefile  Makefile.am  Makefile.in  __init__.py  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libtool  make.sh  puckermod.mod
examples/lib_and_noinst_test_programs/examples/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
examples/lib_and_noinst_test_programs/examples/cxx/: __init__.py  ade.xyz  cxx_example  init.py.bak  main.cpp  pucker.cpp  pucker.hpp
examples/lib_and_noinst_test_programs/examples/fortran/: __init__.py  fortran_example  init.py.bak  main.f90  puckermod.f90
examples/lib_and_noinst_test_programs/examples/python/: __init__.py  exceptions.cpp  exceptions.hpp  init.py.bak  pucker.cpp  pucker.hpp  pyiface.cpp  pytdbsc.la  python_example.py  python_pytdbsc_la-exceptions.lo  python_pytdbsc_la-pucker.lo  python_pytdbsc_la-pyiface.lo
examples/lib_and_noinst_test_programs/src/: Doxyfile  Makefile.am  Makefile.in  __init__.py  tdbsc.cpp  tdbsc.hpp  tdbsc_bspline.cpp  tdbsc_bspline.hpp  tdbsc_dihed.cpp  tdbsc_dihed.hpp  (+2 more)
examples/python/: __init__.py  runfoobar.py
examples/python_module/: __init__.py
python/: CONFIG.py  atizer-extradir  atizer-library  atizer-program  atizer-python-module  atizer-python-package  atizer-subdir
python/atizer/: __init__.py  base.py  f90deps.py  licenses.py  mod_autolib.py  mod_autopackage.py  mod_autoprog.py  mod_autotarget.py  utilities.py
(+32 files in other folders)
